--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
+    "canvas": "^3.1.0",
     "eslint": "^8.36.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.5.2"
   },
   "dependencies": {
-    "phaser": "^3.6.0"
+    "phaser": "^3.87.0"
   }
 }
