Install React and add Mint page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
     "lint-fix": "eslint . --ext .ts --fix"
   },
   "devDependencies": {
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "canvas": "^3.1.0",
     "eslint": "^8.36.0",
     "eslint-plugin-unused-imports": "^2.0.0",
@@ -20,6 +23,9 @@
     "vite": "^4.5.2"
   },
   "dependencies": {
-    "phaser": "^3.87.0"
+    "framer-motion": "^12.6.0",
+    "phaser": "^3.87.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
