--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,16 @@
     "vite": "^4.5.2"
   },
   "dependencies": {
+    "@reown/appkit": "^1.7.1",
+    "@reown/appkit-adapter-wagmi": "^1.7.1",
     "@tailwindcss/vite": "^4.0.16",
+    "@tanstack/react-query": "^5.70.0",
     "framer-motion": "^12.6.0",
     "phaser": "^3.87.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.16"
+    "tailwindcss": "^4.0.16",
+    "viem": "^2.24.2",
+    "wagmi": "^2.14.15"
   }
 }
