--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,7 +14,10 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noImplicitReturns": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "allowJs": true,
+        "types": []
     },
-    "include": ["src", "mint"]
+    "include": ["src/**/*.*"],
+    "exclude": ["node_modules/*"]
 }
