--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "@wagmi/cli": "^2.2.1",
     "canvas": "^3.1.0",
     "eslint": "^8.36.0",
     "eslint-plugin-unused-imports": "^2.0.0",
