mint page changes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,9 @@
     "phaser": "^3.87.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-native": "^0.78.2",
     "tailwindcss": "^4.0.16",
     "viem": "^2.24.2",
-    "wagmi": "^2.14.15"
+    "wagmi": "^2.14.16"
   }
 }
